--- a/front page/home.html
+++ b/front page/home.html
@@ -17,7 +17,7 @@
     </div>
     </nav>
 </header>
- 
+
 
   <main>
     <!-- Change the structure to group h2 and h3 within a div -->
@@ -30,7 +30,7 @@
       <br>
       <hr>
       <br>
-      <button class="glow-button4">$1,199.00</button>
+      <button class="glow-button4" style="background-color: grey;">$1,199.00</button>
       <br>
       <hr>
       <br>
@@ -47,7 +47,7 @@
       <br>
       <hr>
       <br>
-      <button class="glow-button4">$1,999.00</button>
+      <button class="glow-button4"style="background-color: grey;">$1,999.00</button>
       <br>
       <hr>
       <br>
@@ -56,6 +56,7 @@
     <button class="button inner-glow-button">Add to Cart</button>
     </div>
   </li>
+
 </ul>
 <!---->
 <ul>
@@ -67,7 +68,7 @@
       <br>
       <hr>
       <br>
-      <button class="glow-button4">$9,000.00</button>
+      <button class="glow-button4"style="background-color: grey;">$9,000.00</button>
       <br>
       <hr>
       <br>
@@ -84,7 +85,47 @@
       <br>
       <hr>
       <br>
-      <button class="glow-button4">$1,899.00</button>
+      <button class="glow-button4"style="background-color: grey;" >$1,899.00</button>
+      <br>
+      <hr>
+      <br>
+      <button class="button outer-glow-button">Buy Now</button>
+      <br>
+    <button class="button inner-glow-button">Add to Cart</button>
+    </div>
+  </li>
+</ul>
+<section id="morebutton">
+  <button id="load">Load more!</button>
+</section>
+<section id="more">
+<ul>
+ <li>
+    <img src="mon.png" alt="Project 1" id="image5">
+    <div class="text-container">
+      <h2>ZOWIE XL2546 TN 240Hz</h2>
+      <h3>ZOWIE's exclusive technology - Dynamic Accuracy (DyAc™) makes vigorous in-game actions such as spraying less blurry. This allows gamers to see the position of crosshair and impact points more clearly which can help with recoil control.</h3>
+      <br>
+      <hr>
+      <br>
+      <button class="glow-button4"style="background-color: grey;">$499.99</button>
+      <br>
+      <hr>
+      <br>
+      <button class="button outer-glow-button">Buy Now</button>
+      <br>
+    <button class="button inner-glow-button">Add to Cart</button>
+    </div>
+  </li>
+  <li>
+    <img src="mou1.png" alt="Project 1" id="image6">
+    <div class="text-container">
+      <h2>PRO X SUPERLIGHT 2</h2>
+      <h3>Introducing the next evolution of a pro gaming icon—now faster and more precise. Our championship-winning 60g gaming mouse was designed in collaboration with the world’s leading pro gamers to break down any barrier between you and the win.</h3>
+      <br>
+      <hr>
+      <br>
+      <button class="glow-button4"style="background-color: grey;">$124.99</button>
       <br>
       <hr>
       <br>
@@ -95,6 +136,56 @@
   </li>
 </ul>
 
+<ul>
+ <li>
+    <img src=".png" alt="Project 1" id="image5">
+    <div class="text-container">
+      <h2>ZOWIE XL2546 TN 240Hz</h2>
+      <h3></h3>
+      <br>
+      <hr>
+      <br>
+      <button class="glow-button4"style="background-color: grey;">$499.99</button>
+      <br>
+      <hr>
+      <br>
+      <button class="button outer-glow-button">Buy Now</button>
+      <br>
+    <button class="button inner-glow-button">Add to Cart</button>
+    </div>
+  </li>
+  <li>
+    <img src="mou1.png" alt="Project 1" id="image6">
+    <div class="text-container">
+      <h2>PRO X SUPERLIGHT 2</h2>
+      <h3>Introducing the next evolution of a pro gaming icon—now faster and more precise. Our championship-winning 60g gaming mouse was designed in collaboration with the world’s leading pro gamers to break down any barrier between you and the win.</h3>
+      <br>
+      <hr>
+      <br>
+      <button class="glow-button4"style="background-color: grey;">$124.99</button>
+      <br>
+      <hr>
+      <br>
+      <button class="button outer-glow-button">Buy Now</button>
+      <br>
+    <button class="button inner-glow-button">Add to Cart</button>
+    </div>
+  </li>
+</ul>
+<button id="unload">Show less!</button>
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
 
 <script type="text/javascript" src="script.js"></script>   
 </body>
